--- a/main/templates/canvas.html
+++ b/main/templates/canvas.html
@@ -4,4 +4,4 @@ video, canvas { max-width: 100%; height: auto; }
 <body>
 
 </body>
-<script src="/static/the.js"></script>
+<script src="/the.js"></script>
