--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Visualizing Baltimore Murals</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 
   </head>
 
-  <body id="page-top">
+  <body id="page-top" >
 
 <div class = 'logo'>
 <!--   all your other divs part of the web content (images,text,etc) -->
@@ -31,10 +31,12 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
+  </div>
 
 
 
-</div>
+
+
 
 <div id="particles-js" ></div>
 <script type="text/javascript" src="particles.js"></script>
@@ -47,7 +49,8 @@
 
 </script>
 
-
+<img class="skyline" src="../images/banv1.png" smooth-parallax start-position-y="-0.65"smooth-parallax start-position-x="0.025">
+<img class="skyline" src="../images/banv2.png" smooth-parallax start-position-y="-0.7">
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
@@ -71,11 +74,11 @@
     <!-- About Section -->
     <section id="about" class="about-section text-center">
       <div class="container">
+
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Map View</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <p class="text-white-50">Here you can explore and view murals pinpointed on the Baltimore map.</p>
           </div>
         </div>
         <img src="images/mapboximg.jpg" class="img-fluid" alt="">
