updated map: colors, click popup

--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -11,7 +11,6 @@
         margin: 0;
         padding: 0;
       }
-
       #map {
         position: absolute;
         top: 0;
@@ -25,65 +24,59 @@
     <script>
       mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhbWJ5MSIsImEiOiJjam0ydW42cDczMmZ1M2twNDhreHBxZDltIn0.o5P0BsCRazfRE2fWTZzPFw';
       var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/stamby1/cjm302iy60hnj2snt6u4r4s9l',
-        center: [-76.594960, 39.304647],
-        zoom: 12.1
-      });
-    // code from the next step will go here
-
-    map.addControl(new mapboxgl.NavigationControl());
-
-    map.on('mouseenter', 'geodata-new', function(e) {
-      // Change the cursor style as a UI indicator.
-      map.getCanvas().style.cursor = 'pointer';
+      container: 'map',
+      style: 'mapbox://styles/stamby1/cjm3wck5o1bxe2snmr8v3uxxl',
+      center: [-76.594960, 39.304647],
+      zoom: 12.1
     });
-
-    var popup = new mapboxgl.Popup({
-      closeOnClick: false,
-      offset: [0, -15]
-    })
-
-    map.on('mouseenter', 'geodata-new', function(e) {
-
+    // code from the next step will go here
+    map.on('click', function(e) {
       var features = map.queryRenderedFeatures(e.point, {
         layers: ['geodata-new'] // replace this with the name of the layer
       });
-
       if (!features.length) {
         return;
       }
-
       var feature = features[0];
-      var artists = feature.properties.artists
-      artists = artists.substring(2, artists.length - 2)
-      if (artists.includes(",") == true) {
-      	var last = artists.lastIndexOf(",")
-      	artists = artists.substring(0, last - 1) + " and " + artists.substring(last + 1)
+        var artists = feature.properties.artists
+       artists = artists.substring(2, artists.length - 2)
+       if (artists.includes(",") == true) {
+        var last = artists.lastIndexOf(",")
+        artists = artists.substring(0, last - 1) + " and " + artists.substring(last + 1)
       }
+
+      //‘<img src=“’ + location.image + ‘“>’
 
       var image = "hi"
-
       if ("images" in feature.properties) {
-      	image = feature.properties.images
-      	image = image.substring(2, image.length-2)
-      } else {
-      	image = "https://error"
-      }
+        image = feature.properties.images
+        image = image.substring(2, image.length-2)
+        var popup = new mapboxgl.Popup({ offset: [0, -15] })
+          .setLngLat(feature.geometry.coordinates)
+          .setHTML('<h3>' + feature.properties.address + '</h3><p>' + "Created by " + artists + '</p>' + '<a href=“' + image + '”><img src="' + image + '" style="width:300px;height:200px;"></a>')
+          .setLngLat(feature.geometry.coordinates)
+          .addTo(map);
 
-      popup
+      } else {
+        var popup = new mapboxgl.Popup({ offset: [0, -15] })
         .setLngLat(feature.geometry.coordinates)
-        .setHTML('<h3>' + feature.properties.address + '</h3><p>' + "Created by " + artists + '</p>' + '<img src="' + image + '" alt="Picture not in database." style="width:300px;height:200px;">')
+        .setHTML('<h3>' + feature.properties.address + '</h3><p>' + "Created by " + artists + '</p>')
         .setLngLat(feature.geometry.coordinates)
         .addTo(map);
+      }
     });
 
-    map.on('mouseleave', 'geodata-new', function() {
-      map.getCanvas().style.cursor = '';
-      popup.remove();
-    });
-
-
+    // Add zoom and rotation controls to the map.
+    map.addControl(new mapboxgl.NavigationControl());
     </script>
+
+    <button onclick="goBack()">Go Back</button>
+
+    <script>
+      function goBack() {
+          window.history.back();
+      }
+    </script>
+
   </body>
 </html>
