--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -27,8 +27,8 @@
 
 <div class = 'logo'>
 <!--   all your other divs part of the web content (images,text,etc) -->
-<h1 class="ml16"><br><br>Visualizing Baltimore Murals</h1>
-
+<h1 class="ml16"><br><br>Charm City Murals</h1>
+<h1 class="ml15">A Baltimore Mural Visualization Project</h1>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
   </div>
@@ -49,10 +49,10 @@
 
 </script>
 
-<img class="skyline" src="../images/banv1.png" smooth-parallax start-position-y="-0.65"smooth-parallax start-position-x="0.025">
+<img class="skyline" src="../images/banv1.png" smooth-parallax start-position-y="-0.68"smooth-parallax start-position-x="0.01">
 <img class="skyline" src="../images/banv2.png" smooth-parallax start-position-y="-0.7">
     <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,13 +71,15 @@
         </div>
       </div>
     </nav>
-    <!-- About Section -->
+
     <section id="about" class="about-section text-center">
       <div class="container">
 
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Map View</h2>
+            <p><button type="button" class="btn btn-outline-warning" ><a href="map">Explore Data</a></button></p>
+
             <p class="text-white-50">Here you can explore and view murals pinpointed on the Baltimore map.</p>
           </div>
         </div>
@@ -85,14 +87,13 @@
       </div>
     </section>
 
-     <!-- About Section -->
     <section id="about2" class="about-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Camera View</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <p><<button type="button" class="btn btn-outline-warning" ><a href="canvas">Explore Data</a></button></p>
+            <p class="text-white-50">Explore a mural in AR!</p>
           </div>
         </div>
         <img src="images/mural.jpg" class="img-fluid" alt="">
