--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -22,11 +22,7 @@
     <link href="css/grayscale.min.css" rel="stylesheet">
 
   </head>
-<style type="text/css">
-body {
-    overflow:hidden;
-}
-</style>
+
   <body id="page-top" >
 
 <div class = 'logo'>
@@ -49,8 +45,8 @@ body {
 
 </script>
 
-<img class="skyline" src="../images/banv1.png" smooth-parallax start-position-y="-0.68"smooth-parallax start-position-x="-0.02">
-<img class="skyline" src="../images/banv2.png" smooth-parallax start-position-y="-0.7"smooth-parallax start-position-x="-0.03">
+<img class="skyline" src="../images/banv1.png" smooth-parallax start-position-y="-0.5"smooth-parallax end-position-y="-0.5"smooth-parallax start-position-x="-0.02">
+<img class="skyline" src="../images/banv3.png" smooth-parallax start-position-y="-0.5"smooth-parallax end-position-y="-0.55"smooth-parallax start-position-x="-0.03">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
@@ -84,7 +80,7 @@ body {
             <p class="text-white-50">Here you can explore and view murals pinpointed on the Baltimore map.</p>
           </div>
         </div>
-        <img src="images/mapboximg.jpg" class="img-fluid" alt="">
+        <img src="images/map-screenshot.png" class="img-fluid" alt="">
       </div>
     </section>
 
@@ -93,7 +89,7 @@ body {
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Camera View</h2>
-            <p><<button type="button" class="btn btn-outline-warning" ><a href="discover">Discover Mural!</a></button></p>
+            <p><<button type="button" class="btn btn-outline-warning" ><a href="discover">Discover Murals!</a></button></p>
             <p class="text-white-50">Explore a mural in AR!</p>
           </div>
         </div>
