--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -128,36 +128,8 @@
                        → This is a variation of <strong><u>unsupervised learning</u></strong>. Our model uses a dual encoder model to compare unsupervised feature vectors. This essentially builds a "mural vector space" allowing the model to not be constrained by the number of murals that can be compared.</p>
             <p class="text-white-50">5. <strong><u>Augmented reality</u></strong> using OpenCV displays the mural information as overlay on the captured image.</p>
             <p class="text-white-50">6. <strong><u>Frontend</u></strong> implemented using Bootstrap, <a href="https://vincentgarreau.com/particles.js/">particle.js</a>, parallax scrolling, and <a href="mapbox.com/studio">MapBox</a></p>
-            <p class="text-white-50">7. <strong><u>Domain</u></strong> name and server using Google Cloud computing systems.</p>
+            <p class="text-white-50">7. <strong><u>Domain</u></strong> name by <a href="domain.com">domain.com</a> and server using Google Cloud computing systems.</p>
 
-            <div>
-              <img class="mySlides" src="https://www.w3schools.com/howto/img_woods_wide.jpg">
-              <img class="mySlides" src="https://www.w3schools.com/howto/img_5terre_wide.jpg">
-              <img class="mySlides" src="https://www.w3schools.com/howto/img_mountains_wide.jpg">
-              <img class="mySlides" src="https://www.w3schools.com/howto/img_lights_wide.jpg">
-              <button text-align="center" position="absoluteonclick="plusDivs(-1)">&#10094;</button>
-              <button text-align="center" onclick="plusDivs(+1)">&#10095;</button>
-
-              <script>
-                var slideIndex = 1;
-                showDivs(slideIndex);
-
-                function plusDivs(n) {
-                    showDivs(slideIndex += n);
-                }
-
-                function showDivs(n) {
-                    var i;
-                    var x = document.getElementsByClassName("mySlides");
-                    if (n > x.length) {slideIndex = 1} 
-                    if (n < 1) {slideIndex = x.length} ;
-                    for (i = 0; i < x.length; i++) {
-                        x[i].style.display = "none"; 
-                    }
-                    x[slideIndex-1].style.display = "block"; 
-                }
-              </script>
-            </div>
           </div>
         </div>
       </div>
