embed google slides screenshots

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#map">Image View</a>
+              <a class="nav-link js-scroll-trigger" href="#map">Map View</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#camera">Camera View</a>
@@ -129,6 +129,8 @@
             <p class="text-white-50">5. <strong><u>Augmented reality</u></strong> using OpenCV displays the mural information as overlay on the captured image.</p>
             <p class="text-white-50">6. <strong><u>Frontend</u></strong> implemented using Bootstrap, <a href="https://vincentgarreau.com/particles.js/">particle.js</a>, parallax scrolling, and <a href="mapbox.com/studio">MapBox</a></p>
             <p class="text-white-50">7. <strong><u>Domain</u></strong> name by <a href="domain.com">domain.com</a> and server using Google Cloud computing systems.</p>
+
+            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR28Gz5QmdxI2th6Nw1nnsugD8j_gBGBCnhlR32zynYbQQu5I7IVpRMjDcK4cc7luQsVtl_lFHCyBhF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
 
           </div>
         </div>
