--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -58,13 +58,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#map">Map View</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#camera">Camera View</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">Impact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#tech">Technical Stack</a>
@@ -73,18 +73,6 @@
         </div>
       </div>
     </nav>
-
-    <section id="about" class="about-section text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">About</h2>
-            <p class="text-white-50">This project stems from our deep belief that art should be celebrated and acknowledged.</p>
-            <p class="text-white-50">The city's murals are one of its most charming assets and showcase a growing city filled with creativity and promise.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section id="map" class="about-section text-center">
       <div class="container">
@@ -109,6 +97,18 @@
           </div>
         </div>
         <img src="images/mural.jpg" class="img-fluid" alt="">
+      </div>
+    </section>
+
+    <section id="about" class="about-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="text-white mb-4">Impact</h2>
+            <p class="text-white-50">This project stems from our deep belief that art should be celebrated and acknowledged.</p>
+            <p class="text-white-50">The city's murals are one of its most charming assets and showcase a growing city filled with creativity and promise.</p>
+          </div>
+        </div>
       </div>
     </section>
 
