--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet">
-
+    <style>.skyline {
+      max-width: 100%;
+      }</style>
   </head>
 
   <body id="page-top" >
@@ -96,7 +98,7 @@
             <p class="text-white-50">Explore a mural in AR!</p>
           </div>
         </div>
-        <img src="images/mural.jpg" class="img-fluid" alt="">
+        <img src=".../camera-back.png" class="img-fluid" alt="">
       </div>
     </section>
 
@@ -105,8 +107,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Impact</h2>
-            <p class="text-white-50">This project stems from our deep belief that art should be celebrated and acknowledged.</p>
-            <p class="text-white-50">The city's murals are one of its most charming assets and showcase a growing city filled with creativity and promise.</p>
+            <p class="text-white-50">Baltimore is a city of creatives. Local artists use their work as a way to connect people and communities, and to express the city's unique history and personality so central to its identity. This application showcases the much lauded artistic scene in Baltimore City, yet also reveals a deeply rich past, and a dynamic, complex present permeating throughout the nation. Most importantly, however, murals express the current social and political climate, sometimes strongly enough to become a form of activism and bring to light the community's struggles.</p>
+            <p class="text-white-50">Overall, this application encourages our residents to explore the city and is an important step forward in celebrating and acknowledging public art as a voice of charm city. </p>
           </div>
         </div>
       </div>
@@ -118,19 +120,20 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Technical Stack</h2>
             <p class="text-white-50">
-            Thank you to <a href="https://stae.co/hop-hacks/">Stae City Data</a> and the <a href="https://data.baltimorecity.gov/Culture-Arts/Baltimore-City-Murals-Project-1987-to-Present/zqh4-9ud5">Baltimore City Government</a> for providing extensive data on Baltimore city murals.<br><br>Now for a look behind the magic...</p>
-            <p class="text-white-50">1. <strong><u>Camera integration</u></strong> for users to discover new murals using their phone camera. Implemented with modern WebHTML5 capabilities.</p>
-            <p class="text-white-50">2. <strong><u>Object detection</u></strong> using OpenCV to process captured images, and Flask to send down information to our server.</p>
-            <p class="text-white-50">3. <strong><u>Extensive data exploration</u></strong> to aggregate training data for our CNN by scraping existing data<br>
-            → <a href="https://arxiv.org/abs/1708.04680">Augmentor</a> was used to help supplement our sparse data set of 170 data points into countless accomodations.<br>
-            → Utilized <a href="https://www.cse.ust.hk/~qyang/Docs/2009/tkde_transfer_learning.pdf">transfer learning</a> from <a href="https://github.com/nitroventures/tensorflow-art">TensorFlow Art</a> as an artwork classifier.</p>
-            <p class="text-white-50">4. <strong><u>Image comparison</u></strong> to categorize murals. Our model uses the machine learning principle of convolutional neural networks and is implemented with TensorFlow and NumPy.<br>
-                       → This is a variation of <strong><u>unsupervised learning</u></strong>. Our model uses a dual encoder model to compare unsupervised feature vectors. This essentially builds a "mural vector space" allowing the model to not be constrained by the number of murals that can be compared.</p>
-            <p class="text-white-50">5. <strong><u>Augmented reality</u></strong> using OpenCV displays the mural information as overlay on the captured image.</p>
-            <p class="text-white-50">6. <strong><u>Frontend</u></strong> implemented using Bootstrap, <a href="https://vincentgarreau.com/particles.js/">particle.js</a>, parallax scrolling, and <a href="mapbox.com/studio">MapBox</a></p>
-            <p class="text-white-50">7. <strong><u>Domain</u></strong> name by <a href="domain.com">domain.com</a> and server using Google Cloud computing systems.</p>
+            Our application uses a wide range of tools and frameworks. Many thanks, to <a href="https://stae.co/hop-hacks/">Stae City Data</a> and the <a href="https://data.baltimorecity.gov/Culture-Arts/Baltimore-City-Murals-Project-1987-to-Present/zqh4-9ud5">Baltimore City Government</a> for their data sources.</p>
+            <p class="text-white-50">1. Uses cutting-edge HTML5 to bring AR to your phone browser, making our experience immediately available to everyone.</p>
+            <p class="text-white-50">2. Built on top of the light weight microframework Flask, to help create a robust API.</p>
+            <p class="text-white-50">3. Uses custom segmentation code and object detection code for murals, using the power of OpenCV.</p>
+            <p class="text-white-50">4. Extensive data exploration in bash to aggregate and expand training data for our CNN by using city data images.</p>
+            <p class="text-white-50">5. Implements <a href="https://arxiv.org/abs/1708.04680">Augmentor</a> to help supplement our sparse data set of 170 images into countless new ones.</p>
+            <p class="text-white-50">6. Utilized <a href="https://www.cse.ust.hk/~qyang/Docs/2009/tkde_transfer_learning.pdf">transfer learning</a> from <a href="https://github.com/nitroventures/tensorflow-art">TensorFlow Art</a> as an artwork classifier.</p>
+            <p class="text-white-50">7. Wrote custom network for mural categorization. We built our model with NumPy and Tensorflow. In particular, we implemented a dual encoder convolutional neural network for unsupervised feature comparision. This essentially builds a "mural vector space" allowing the model, allowing for any murals to be quickly lookup and compared.</p>
+            <p class="text-white-50">8. Used <a href="http://tensorboard.charmcitymurals.com/">Tensorboard</a> for training validation and great visualizations.</p>
+            <p class="text-white-50">9. Augmented Reality using HTML and data derived from OpenCV to provide information as overlay on the captured image.</p>
+            <p class="text-white-50">10. Frontend implemented using Bootstrap, <a href="https://vincentgarreau.com/particles.js">particle.js</a>, <a href="https://diegoversiani.me/smooth-parallax/">Smooth Parallax</a> scrolling, and <a href="mapbox.com/studio">MapBox</a></p>
+            <p class="text-white-50">11. Services: Domain name using domain.com and server using Google Cloud Compute systems.</p>
 
-            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR28Gz5QmdxI2th6Nw1nnsugD8j_gBGBCnhlR32zynYbQQu5I7IVpRMjDcK4cc7luQsVtl_lFHCyBhF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
+            <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR28Gz5QmdxI2th6Nw1nnsugD8j_gBGBCnhlR32zynYbQQu5I7IVpRMjDcK4cc7luQsVtl_lFHCyBhF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" style="max-width:100%"allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
 
           </div>
         </div>
