--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -94,11 +94,11 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Camera View</h2>
-            <p><<button type="button" class="btn btn-outline-warning" ><a href="discover">Discover Murals!</a></button></p>
+            <p><button type="button" class="btn btn-outline-warning" ><a href="discover">Discover Murals!</a></button></p>
             <p class="text-white-50">Explore a mural in AR!</p>
           </div>
         </div>
-        <img src=".../camera-back.png" class="img-fluid" alt="">
+        <img src="images/camera-back.png" class="img-fluid" alt="">
       </div>
     </section>
 
